--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "peliculas-back",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jn200107/peliculas-back.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jn200107/peliculas-back/issues"
-  },
-  "homepage": "https://github.com/jn200107/peliculas-back#readme"
+  "license": "ISC"
 }
